objects/hed__Attribute__c.object
<CustomObject>
    <description>A characteristic of or a credential held by the associated Contact. For example, an Attribute record with a Credential record type can indicate that a faculty member has a Multiple Subject Teaching Credential.</description>
    <label>Attribute</label>
    <nameField>
        <label>Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>hed__Role__c</fullName>
        <description>The role of the person when achieving an associated Credential.</description>
        <inlineHelpText>The role of the person when achieving an associated Credential.</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Student</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Agency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The agency that provided or certified the credential.</description>
        <inlineHelpText>The agency that provided or certified the credential.</inlineHelpText>
        <label>Agency</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Attributes</relationshipLabel>
        <relationshipName>Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Status__c</fullName>
        <description>The status of the Attribute. For example, In Progress or Completed.</description>
        <inlineHelpText>The status of the Attribute. For example, In Progress or Completed.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Enrolled</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>On Hold</fullName>
                </value>
                <value>
                    <fullName>Withdrew</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person this Attribute applies to.</description>
        <inlineHelpText>The person this Attribute applies to.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Attributes</relationshipLabel>
        <relationshipName>Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Expired__c</fullName>
        <description>Indicates whether the Attribute has expired. This is selected automatically if the Attribute End Date is in the past.</description>
        <formula>TODAY() &gt;  hed__End_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the Attribute has expired. This is selected automatically if the Attribute End Date is in the past.</inlineHelpText>
        <label>Expired</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__End_Date__c</fullName>
        <description>The date when the credential or Attribute expires or requires renewal.</description>
        <inlineHelpText>The date when the credential or Attribute expires or requires renewal.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A lookup to the Credential that this Attribute applies to.</description>
        <inlineHelpText>The Credential that this Attribute applies to.</inlineHelpText>
        <label>Credential</label>
        <referenceTo>hed__Credential__c</referenceTo>
        <relationshipLabel>Attributes</relationshipLabel>
        <relationshipName>Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Start_Date__c</fullName>
        <description>The issue date for the credential or Attribute.</description>
        <inlineHelpText>The issue date for the credential or Attribute.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Description__c</fullName>
        <description>More details about the credential or student Attribute.</description>
        <inlineHelpText>More details about the credential or student Attribute.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hed__Subject_Area__c</fullName>
        <description>The content or subject area that a credential is for.</description>
        <inlineHelpText>The content or subject area that a credential is for.</inlineHelpText>
        <label>Subject Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>Career and Technical Education</fullName>
                </value>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>English Language Arts</fullName>
                </value>
                <value>
                    <fullName>Fine and Performing Arts</fullName>
                </value>
                <value>
                    <fullName>Foreign Language</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Life and Physical Sciences</fullName>
                </value>
                <value>
                    <fullName>Mathematics</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Physical, Health, and Safety Education</fullName>
                </value>
                <value>
                    <fullName>Physics</fullName>
                </value>
                <value>
                    <fullName>Psychology</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>Social Studies</fullName>
                </value>
                <value>
                    <fullName>Sociology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Attribute_Type__c</fullName>
        <description>The kind of credential or student Attribute.</description>
        <inlineHelpText>The kind of credential or student Attribute.</inlineHelpText>
        <label>Attribute Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Certification</fullName>
                </value>
                <value>
                    <fullName>Endorsement</fullName>
                </value>
                <value>
                    <fullName>Licensure</fullName>
                </value>
                <value>
                    <fullName>Accommodation</fullName>
                </value>
                <value>
                    <fullName>Asylee</fullName>
                </value>
                <value>
                    <fullName>Economically Disadvantaged</fullName>
                </value>
                <value>
                    <fullName>English Learners</fullName>
                </value>
                <value>
                    <fullName>Family Consideration</fullName>
                </value>
                <value>
                    <fullName>Foster Care</fullName>
                </value>
                <value>
                    <fullName>Free Lunch</fullName>
                </value>
                <value>
                    <fullName>Homeless</fullName>
                </value>
                <value>
                    <fullName>Immigrant</fullName>
                </value>
                <value>
                    <fullName>International Student</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Parent in Military</fullName>
                </value>
                <value>
                    <fullName>Pregnant</fullName>
                </value>
                <value>
                    <fullName>Reduced Price Lunch</fullName>
                </value>
                <value>
                    <fullName>Refugee</fullName>
                </value>
                <value>
                    <fullName>Section 504 Handicapped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Field_Of_Study__c</fullName>
        <description>The field of study for the Attribute&apos;s Credential.</description>
        <formula>TEXT(hed__Credential__r.hed__Field_Of_Study__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The field of study for the Attribute&apos;s Credential. Read only.</inlineHelpText>
        <label>Field of Study</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Activity_End_Date__c</fullName>
        <description>The completion date of the Credential requirements.</description>
        <inlineHelpText>The completion date of the Credential requirements.</inlineHelpText>
        <label>Activity End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Credential_Number__c</fullName>
        <description>The certification number or license number of the Attribute&apos;s Credential.</description>
        <inlineHelpText>The certification number or license number of the Attribute&apos;s Credential.</inlineHelpText>
        <label>Credential Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Activity_Start_Date__c</fullName>
        <description>The date that the person started earning the Credential.</description>
        <inlineHelpText>The date that the person started earning the Credential.</inlineHelpText>
        <label>Activity Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Verification_Status__c</fullName>
        <description>Indicates the verification status of a credential.</description>
        <inlineHelpText>Indicates the verification status of a credential.</inlineHelpText>
        <label>Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Verified</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Unverified</fullName>
                </value>
                <value>
                    <fullName>Revoked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Credentialing_Identifier__c</fullName>
        <description>An International Resource Identifier that uniquely identifies this credential.</description>
        <externalId>true</externalId>
        <inlineHelpText>An International Resource Identifier that uniquely identifies this credential.</inlineHelpText>
        <label>Credentialing Identifier</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>hed__Verification_Status_Date__c</fullName>
        <description>The most recent date Verification Status changed.</description>
        <inlineHelpText>The most recent date Verification Status changed.</inlineHelpText>
        <label>Verification Status Date</label>
        <type>Date</type>
    </fields>
    <listViews>
        <fullName>hed__All</fullName>
        <columns>NAME</columns>
        <columns>hed__Agency__c</columns>
        <columns>hed__Attribute_Type__c</columns>
        <columns>hed__Contact__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <recordTypes>
        <fullName>hed__Credential</fullName>
        <active>true</active>
        <description>Allows educational institutions to track licenses, certifications, or endorsements earned by staff or students.</description>
        <label>Credential</label>
    </recordTypes>
    <recordTypes>
        <fullName>hed__Student_Characteristic</fullName>
        <active>true</active>
        <description>Allows educational institutions to track important student characteristics that might affect students&apos; education.</description>
        <label>Student Characteristic</label>
    </recordTypes>
</CustomObject>